# h-ros

./: .gitignore  README.md  h-ros.cabal  rosalind-h.cabal
src/: Common.hs  Dna.hs  Fasta.hs  Protein.hs  Rna.hs  dna.hs  fib.hs  full.hs  gc.hs  gcFast.hs  grph.hs  hamm.hs  iprb.hs  kmer.hs  kmp.hs  lev.hs  lexv.hs  lia.hs  prob.hs  revc.hs  rna.hs  sseq.hs  subs.hs
src/problems/: cat.hs  cons.hs  corr.hs  dna.hs  fib.hs  fibd.hs  full.hs  gc.hs  grph.hs  hamm.hs  inod.hs  kmer.hs  kmp.hs  lcsm.hs  lexf.hs  lgis.hs  lgisFast.hs  long.hs  mmch.hs  mprt.hs  mrna.hs  orf.hs  perm.hs  pmch.hs  pper.hs  prot.hs  prtm.hs  revc.hs  revp.hs  rna.hs  rstr.hs  sign.hs  spec.hs  splc.hs  sseq.hs  subs.hs  tran.hs  tree.hs
test/resources/: rosalind_cat.txt  rosalind_cat2.txt  rosalind_cat3.txt  rosalind_corr.txt  rosalind_lcsm.txt  rosalind_lgis.txt  rosalind_lgis2.txt  rosalind_mmch.txt  rosalind_mmch2.txt  rosalind_orf1.txt  rosalind_orf2.txt  rosalind_orf3.txt  rosalind_orf4.txt  rosalind_pmch.txt  rosalind_pmch2.txt  rosalind_rstr.txt  rosalind_tree.txt
