name:                rosalind-h
version:             0.1.0.0
license:             MIT
author:              Francisco Tanudjaja
maintainer:          francisco@bina.com
build-type:          Simple
cabal-version:       >=1.10

executable rosalind 
  main-is:             problems/rna.hs
  build-depends:       base >=4.8 && <4.9
                     , containers
  hs-source-dirs:      src
  default-language:    Haskell2010
