name:                rosalind-h
version:             0.1.0.0
license:             MIT
author:              Francisco Tanudjaja
maintainer:          francisco@bina.com
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Dna, Rna, Protein, Fasta
  build-depends:       base >= 4.8 && < 4.9
                     , containers
                     , text
                     , vector
  default-language:    Haskell2010

executable rosalind 
  main-is:             problems/rna.hs
  build-depends:       base >= 4.8 && < 4.9
                     , rosalind-h
  hs-source-dirs:      src
  default-language:    Haskell2010
